--- a/css/Style1.css
+++ b/css/Style1.css
@@ -6,13 +6,13 @@
     text-align:center;
     width: 400px;
     height: 300px;
-    border:40px solid rgb(210, 11, 11);
+    border:40px solid rgb(210, 44, 11);
     padding: 60px solid #3a212c;
     margin: 40px;
     content: rgb(60, 159, 60);
 }
 h1{
-    color: #830909;
+    color: #3336db;
 }
 body{
     background-color: yellow;
